--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-
 /*--------------------------------------------------------------
 # Font & Color Variables
 --------------------------------------------------------------*/
@@ -1284,4 +1283,12 @@ img.portfolio {
   z-index: 10;
   background: #fff;
   padding: 10px 0;
+}
+
+.isotope-container.isotope-fading {
+  opacity: 0.3;
+  transition: opacity 0.5s;
+}
+.isotope-container {
+  transition: opacity 0.5s;
 }
